# pkcs11-proxy-ng

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile.kryoptic  Dockerfile.test  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs  mechanisms.rs  pkcs11_names.rs
crates/cli/src/handlers/: admin.rs  mod.rs  query.rs
crates/cli/src/handlers/crypto/: digest_cipher.rs  mod.rs  sign_verify.rs
crates/cli/src/handlers/objects/: certificates.rs  key_ops.rs  mod.rs  object_ops.rs  output.rs
crates/cli/src/mechanisms/: table.rs
crates/server/: Cargo.toml
crates/server/benches/: proxy_benchmark.rs
crates/server/src/: config.rs  consistency_checks.rs  lib.rs  main.rs
crates/server/src/config/: tests.rs
crates/server/src/server/: context_manager.rs  handle_map.rs  health.rs  mod.rs  slot_map.rs  transport.rs
crates/server/src/server/auth/: identity.rs  mod.rs  mtls.rs  peer_cred.rs  policy.rs  request_identity.rs  token_selector.rs
crates/server/src/server/auth/mtls/: tests.rs
crates/server/src/server/auth/policy/: tests.rs
crates/server/src/server/context_manager/: tests.rs
crates/server/src/server/grpc_service/: async_ops.rs  authorization.rs  byte_output_exact.rs  mod.rs  parameter_output_exact.rs  service_utils.rs  session.rs  session_3x.rs
crates/server/src/server/grpc_service/combined/: decrypt_digest.rs  mod.rs  sign_encrypt.rs
crates/server/src/server/grpc_service/digest_cipher/: cipher.rs  digest.rs  mod.rs
crates/server/src/server/grpc_service/general/: info.rs  interface_caps.rs  lifecycle.rs  mod.rs
crates/server/tests/: README.md  authz_policy_test.rs  cli_hardening_test.rs  concurrency_and_recovery_test.rs  consumer_p11tool_test.rs  consumer_pkcs11_tool_test.rs  consumer_python_test.rs  daemon_cli_ux_test.rs  fault_injection_test.rs  integration_test.rs  kryoptic_mechanism_test.rs  local_quality_gate_test.rs  mechanism_info_mock_test.rs  mechanism_out_derive_mock_test.rs  mechanism_out_gcm_iv_test.rs  mtls_authorization_test.rs  nss_mechanism_coverage_test.rs  parameterized_mechanism_test.rs  provider_matrix_test.rs  shim_c_abi_mechanism_out_test.rs  softhsm_fixture_test.rs  stress_test.rs  template_compat_test.rs  wave1_session_3x_test.rs  wave2_kem_test.rs  wave6_3x_integration_test.rs
crates/server/tests/common_3x/: mod.rs
crates/server/tests/support/: consumers.rs  daemon.rs  mechanism_tests.rs  mod.rs  ops.rs  providers.rs  skip.rs
crates/shim/: Cargo.toml
crates/shim/src/: function_list.rs  function_list_3_0.rs  function_list_3_2.rs  function_registry.rs  interface_probe.rs  lib.rs  state.rs
crates/shim/src/dispatch/general/: admin.rs  async_ops.rs  authenticated_wrap.rs  combined.rs  digest_cipher.rs  helpers.rs  init_general.rs  kem.rs  key_ops.rs  message_crypto.rs  mod.rs  object.rs  session.rs  session_3x.rs  sign_verify.rs  slot.rs  state_ops.rs  unsupported.rs  verify_signature.rs
crates/shim/src/tests/: abi_audit.rs  init_args.rs  interface.rs  mod.rs  null_pointers.rs  output_semantics.rs  resource_limits.rs
(+139 files in other folders)
