[package]
name = "pkcs11-proxy-ng"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "pkcs11-proxy-ng"
path = "src/main.rs"

[dependencies]
pkcs11-proxy-ng-types = { path = "../types" }
pkcs11-proxy-ng-proto = { path = "../proto" }
pkcs11-proxy-ng-backend = { path = "../backend" }
clap.workspace = true
tonic.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
uuid.workspace = true
nix.workspace = true
dashmap.workspace = true
x509-parser.workspace = true
tonic-health.workspace = true

[dev-dependencies]
pkcs11-proxy-ng-client = { path = "../client" }
tokio-stream = "0.1"
tempfile = "3"
sha2 = "0.10"
rcgen = "0.14"
time = "0.3"
criterion = { version = "0.8", features = ["async_tokio"] }
libc = "0.2"

[[bench]]
name = "proxy_benchmark"
harness = false
